--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,41 @@
+version: '3.8'
+
 services:
-  mysql:
-    image: mysql:9.5
-    ports:
-      - "3306:3306"
+  petclinic-mysql:
+    image: mysql:8.0
+    container_name: petclinic-mysql
+    restart: always
     environment:
-      - MYSQL_ROOT_PASSWORD=
-      - MYSQL_ALLOW_EMPTY_PASSWORD=true
-      - MYSQL_USER=petclinic
-      - MYSQL_PASSWORD=petclinic
-      - MYSQL_DATABASE=petclinic
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: petclinic
+      MYSQL_USER: petclinic
+      MYSQL_PASSWORD: petclinic
+    ports:
+      - "3307:3306"
     volumes:
-      - "./conf.d:/etc/mysql/conf.d:ro"
-  postgres:
-    image: postgres:18.1
+      - mysql-data:/var/lib/mysql
+    # Ajout d'un test de santé pour que l'app sache quand la DB est prête
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+
+  petclinic-app:
+    build: .
+    container_name: petclinic-app
+    depends_on:
+      petclinic-mysql:
+        condition: service_healthy  # L'app attend que la DB réponde "OK"
     ports:
-      - "5432:5432"
+      - "8080:8080"
     environment:
-      - POSTGRES_PASSWORD=petclinic
-      - POSTGRES_USER=petclinic
-      - POSTGRES_DB=petclinic
+      - SPRING_PROFILES_ACTIVE=mysql
+      # On force l'URL pour pointer vers le service MySQL du conteneur
+      - SPRING_DATASOURCE_URL=jdbc:mysql://petclinic-mysql:3306/petclinic
+      - SPRING_DATASOURCE_USERNAME=petclinic
+      - SPRING_DATASOURCE_PASSWORD=petclinic
+    restart: on-failure
+
+volumes:
+  mysql-data:
