--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,7 +1,15 @@
-# database init, supports mysql too
-database=mysql
-spring.datasource.url=${MYSQL_URL:jdbc:mysql://localhost/petclinic}
-spring.datasource.username=${MYSQL_USER:petclinic}
-spring.datasource.password=${MYSQL_PASS:petclinic}
-# SQL is written to be idempotent so this is safe
+# Configuration de la source de données
+spring.datasource.url=jdbc:mysql://petclinic-mysql:3306/petclinic?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=petclinic
+spring.datasource.password=petclinic
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Jpa / Hibernate
+# CORRECTION : On laisse Hibernate détecter automatiquement le dialecte
+# On supprime ou on commente la ligne qui pointait vers MySQL8Dialect
+spring.jpa.database=mysql
+spring.jpa.show-sql=true
+
+# Initialisation de la base
 spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=update
