--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,11 @@
-# database init, supports mysql too
-database=h2
-spring.sql.init.schema-locations=classpath*:db/${database}/schema.sql
-spring.sql.init.data-locations=classpath*:db/${database}/data.sql
-
 # Web
 spring.thymeleaf.mode=HTML
+# Attention : ne forcez pas le profil ici si vous le passez déjà via Docker Compose
+# spring.profiles.active=mysql 
 
 # JPA
-spring.jpa.hibernate.ddl-auto=none
+# MODIFICATION : Changez 'none' par 'update' ou 'create' pour la première exécution
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategySnakeCaseImpl
 
@@ -19,8 +17,6 @@ management.endpoints.web.exposure.include=*
 
 # Logging
 logging.level.org.springframework=INFO
-# logging.level.org.springframework.web=DEBUG
-# logging.level.org.springframework.context.annotation=TRACE
 
-# Maximum time static resources should be cached
+# Cache (Optionnel en dev)
 spring.web.resources.cache.cachecontrol.max-age=12h
